<resources>
    <string name="app_name">Cryptowise</string>
    <string name="transactions">Transactions</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="transfer">Transfer</string>
    <string name="coming_soon">Coming soon..</string>
    <string name="price_per_coin">Price per coin</string>
    <string name="quantity">Quantity</string>
    <string name="fee">Fee</string>
    <string name="date">Date</string>
    <string name="action">Action</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="operation">Operation</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add transaction</string>
    <string name="transaction_success">Transaction successfully saved</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="_3_months">3 Months</string>
    <string name="_6_months">6 Months</string>
    <string name="year">Year</string>
    <string name="portfolio_status">Portfolio status</string>
    <string name="simple_moving_average_5">Simple moving average (5)</string>
    <string name="simple_moving_average_10">Simple moving average (10)</string>
    <string name="simple_moving_average_20">Simple moving average (20)</string>
    <string name="simple_moving_average_30">Simple moving average (30)</string>
    <string name="simple_moving_average_50">Simple moving average (50)</string>
    <string name="simple_moving_average_100">Simple moving average (100)</string>
    <string name="ema_12">Exp moving average (12)</string>
    <string name="ema_26">Exp moving average (26)</string>
    <string name="dash">-</string>
    <string name="show_technical_analysis">Show technical analysis</string>
    <string name="loading_text">Please wait while we are loading all the necessary data!</string>
    <string name="help_me_i_m_lost">Help me. I\'m lost!</string>
    <string name="sma_header">Simple moving average</string>
    <string name="sma_desc">Simple Moving Average is an unweighted Moving Average. This means that each day in the data set has equal importance and is weighted equally. As each new day ends, the oldest data point is dropped and the newest one is added to the beginning.</string>
    <string name="pick_interval_between_points">Pick interval between points:</string>
    <string name="pick_sma_type">Pick SMA type:</string>
    <string name="application_name">CRYPTOWISE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_invitation">Don\'t have an account yet? Register</string>
    <string name="login">Login</string>
    <string name="loading_general">Please wait while we are performing some tasks for you!</string>
    <string name="ema">EMA</string>
    <string name="no_connection_error">Looks like there is no internet connection!</string>
    <string name="no_assets_message">Hmm!\n You don\'t have any assets yet</string>
    <string name="unknown_error">Unknown error occurred!</string>
    <string name="overview">Overview</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="rank">Rank</string>
    <string name="market_cap">Market cap</string>
    <string name="volume_usd">Volume (USD)</string>
    <string name="pick_stochastic_type">Pick stochastic indicator type:</string>
    <string name="interval">Interval</string>
    <string name="type">Type</string>
    <string name="stochastic_header">Stochastic indicator</string>
    <string name="stochastic_desc">A stochastic oscillator is a momentum indicator comparing a particular closing price of a security to a range of its prices over a certain period of time. The sensitivity of the oscillator to market movements is reducible by adjusting that time period or by taking a moving average of the result. It is used to generate overbought and oversold trading signals, utilizing a 0–100 bounded range of values.</string>
    <string name="ema_header">Exponential Moving Average</string>
    <string name="ema_desc">The exponential moving average (EMA) is a technical chart indicator that tracks the price of an investment (like a stock or commodity) over time. The EMA is a type of weighted moving average (WMA) that gives more weighting or importance to recent price data. Like the simple moving average, the exponential moving average is used to see price trends over time.</string>
    <string name="no_favourites_yet">You don\'t have any favourites yet!</string>
    <string name="exit">Exit</string>
    <string name="transaction_list_empty">Transaction list is empty now!</string>
    <string name="minus">Minus</string>
    <string name="debt">Debt</string>
</resources>
