<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/sma_line_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/control_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sma_line_chart">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_interval_between_points"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/interval_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hour_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hour" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hour8_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8 Hours" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/day_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_sma_type"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/sma_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sma_5_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SMA 5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sma_20_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SMA 20" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sma_50_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SMA 50" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sma_100_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SMA 100" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/last_point_sma_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/help_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_layout">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sma_5_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            tools:text="SMA XX: 3214.00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sma_10_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            tools:text="SMA XX: 3214.00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sma_20_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            tools:text="SMA XX: 3214.00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sma_30_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            tools:text="SMA XX: 3214.00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sma_50_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            tools:text="SMA XX: 3214.00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sma_100_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            tools:text="SMA XX: 3214.00" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/help_button"
        style="@style/ActionMaterialButton"
        android:text="@string/help_me_i_m_lost"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_point_sma_ll" />


</androidx.constraintlayout.widget.ConstraintLayout>